--- a/fraud_detector/detector/static/detector/css/style.css
+++ b/fraud_detector/detector/static/detector/css/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    background-color: #f8f9fa;
+    background-color: #ebebeb;
 }
 
 /* Card Styles */
@@ -8,7 +8,9 @@ body {
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
     border: none;
 }
-
+.card-body{
+    
+}
 .card-header {
     background-color: #fff;
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
@@ -24,11 +26,19 @@ body {
 .btn-primary {
     background-color: #0d6efd;
     border-color: #0d6efd;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .btn-primary:hover {
     background-color: #0b5ed7;
     border-color: #0a58ca;
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn-primary:active {
+    transform: scale(0.95);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /* Alert Styles */
