--- a/fraud_detector/detector/templates/detector/base.html
+++ b/fraud_detector/detector/templates/detector/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,21 +22,21 @@
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'home'%}">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                    </li >
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cyber' %}">Cyber-security</a>
+                    </li >
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container mt-4">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+     
 
         {% block content %}
         {% endblock %}
